# Ableton-Live-Manager

./: .gitignore  .gitmodules  README.md  components.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml  update-readme.yml
src/: utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: apple_notes.rs  main.rs
src/app/: globals.css  layout.js  not-found.js  page.js
src/app/[not-found]/: page.js
src/components/: AddTagDialogue.js  AlsInfo.js  AppSidebar.js  CollapsibleGroup.js  ConfirmationDialog.js  CustomDragLayer.js  DisplayThirdPartyPlugins.js  DragPreview.js  DraggableProject.js  DropZone.js  DroppableGroup.js  ErrorBoundary.js  FolderView.js  MenuBar.js  Notes.js  ProjectDetails.js  ProjectItem.js  ReadDirectory.js  RightColumn.js  Settings.js  SidebarSearch.js  Tags.js  TrackDetails.js
src/components/Editor/: Editor.js  styles.scss
src/components/Editor/components/: BoldMark.js  ItalicMark.js  Toolbar.js
src/components/features/tags/: AddTagDialogue.js
src/components/hooks/: useAlmFile.js
src/components/layout/: ProjectDetails.js  ProjectItem.js  ThemeToggle.js
src/components/layout/AppSidebar/: CollapsibleGroup.js  SidebarSearch.js  index.js
src/components/ui/: accordion.jsx  badge.jsx  button.jsx  card.jsx  context-menu.jsx  dialog.jsx  loading-spinner.jsx  menubar.jsx  navigation-menu.jsx  progress.jsx  sheet.jsx  sidebar.jsx  table.jsx  tabs.jsx
src/lib/: Ableton.js  appleNotes.js  utils.js
(+3 files in other folders)
