[package]
name = "Ableton-Live-Manager"
version = "0.1.0"
description = "Software to manage Ableton Live projects"
authors = ["Marcel Haupt"]
license = "GPL-3"
repository = "https://github.com/aofn/Ableton-Live-Manager"
default-run = "app"
edition = "2023"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "shell-all", "window-all", "dialog-all", "path-all", "fs-all"] }
opener = "0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
